# AcEvoFfbTuner

./: .gitattributes  .gitignore  ACEVO - Telemetry FFB.code-workspace  AGENTS.md  AcEvoFfbTuner.slnx  README.md  ac_evo_ffb_dev_checklist.md  analyze_snaps.py  build_test.bat  check_mmf.csx  gen_icon.ps1  temp.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  release.yml
.kilo/plans/: 1777205880737-misty-forest.md  1777410217781-tidy-rocket.md  1777576071524-hidden-falcon.md  1777628024841-quick-eagle.md  1777913169178-sunny-rocket.md  1778014779846-swift-canyon.md  1778350871417-playful-wolf.md  1779403954478-r3e-progress.md  1779403954478-witty-tiger.md  1779704924982-misty-cabin.md  1779805492704-gentle-island.md  1782769632980-professional-ffb-tuner-tier1-plan.md  automatic-track-alignment.md  combine-track-map-live-map.md  ffb-coach-page.md  ffb-realism-overhaul.md  lmu-game-support.md  positive-impact-features-analysis.md  r3e-api-analysis.md  rich-track-data-osm.md  split-frequency-pipeline.md
docs/: race-info-overlay-plan.md
installer/: setup.iss
lib/simucube/: sc_bridge.lib
lib/simucube/sc-bridge/: CMakeLists.txt  sc_bridge.cpp
publish/: AcEvoFfbTuner.deps.json  AcEvoFfbTuner.runtimeconfig.json
publish/v1.9.5/: AcEvoFfbTuner.deps.json
src/AcEvoFfbTuner.Core/: AcEvoFfbTuner.Core.csproj  AcEvoFfbTuner.Core.csproj.lscache  FfbLiveServer.cs  TelemetryLoop.cs
src/AcEvoFfbTuner.Tests/: AcEvoFfbTuner.Tests.csproj  AcEvoFfbTuner.Tests.csproj.lscache  FfbChannelMixerTests.cs  FfbDampingTests.cs  FfbEqualizerTests.cs  (+6 more)
tmp/: b64.txt
(+271 files in other folders)
